--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 20180328_3_4_4_rampDownlog.txt
 20180423_hat_p2percent_snf3_hxt2Acq.txt
 20180423_hat_p2percent_snf3_hxt2log.txt
+20180328_3_4_4_rampDownAcq.txt
